--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "iot-backend",
+  "name": "iot-dashboard-server",
   "version": "1.0.0",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "start": "node index.js"
@@ -8,6 +9,6 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "pg": "^8.11.0"
+    "pg": "^8.11.3"
   }
 }
