--- a/client/package.json
+++ b/client/package.json
@@ -5,13 +5,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 8080"
+    "preview": "vite preview --port 8080 --host"
   },
   "dependencies": {
+    "chart.js": "^4.4.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
-    "chart.js": "^4.4.1"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.0",
