--- a/client/package.json
+++ b/client/package.json
@@ -1,20 +1,19 @@
 {
-  "name": "iot-dashboard",
+  "name": "iot-dashboard-client",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 8080 --host"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "chart.js": "^4.4.1",
-    "react": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.3.1"
+    "chart.js": "^4.4.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.0",
-    "vite": "^5.4.0"
+    "vite": "^5.0.0"
   }
 }
