--- a/client/package.json
+++ b/client/package.json
@@ -2,18 +2,20 @@
   "name": "iot-dashboard-client",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
-    "chart.js": "^4.4.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
+    "chart.js": "^4.4.3"
   },
   "devDependencies": {
-    "vite": "^5.0.0"
+    "vite": "^5.4.0",
+    "@vitejs/plugin-react": "^4.3.0"
   }
 }
