--- a/client/package.json
+++ b/client/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "iot-dashboard-client",
   "version": "1.0.0",
@@ -11,11 +12,12 @@
   "dependencies": {
     "chart.js": "^4.4.3",
     "html2canvas": "^1.4.1",
-    "jspdf": "^4.0.0",
+    "jspdf": "^2.5.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
-    "recharts": "^3.6.0"
+    "recharts": "^2.12.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.0",
